rebrand the codebase to codebadger

--- a/config.example.yaml
+++ b/config.example.yaml
@@ -943,6 +943,6 @@ query:
   cache_ttl: ${QUERY_CACHE_TTL:300}
 
 storage:
-  workspace_root: ${WORKSPACE_ROOT:/tmp/codebadger-toolkit}
+  workspace_root: ${WORKSPACE_ROOT:/tmp/codebadger}
   cleanup_on_shutdown: ${CLEANUP_ON_SHUTDOWN:true}
 
